# routex

./: .gitignore  Cargo.toml  README.md  cargo_build_wrapper.py  cross_compile.py  meson.build  target_c_interface.h
.github/workflows/: check.yml
bindings/: tests.cpp
bindings/c/: routex.h
bindings/include/: routex.h  routex.hpp  routx.h  routx.hpp
src/: c.rs  distance.rs  graph.rs  kd.rs  lib.rs  main.rs
src/astar/: error.rs  flat.rs  mod.rs  without_turn_around.rs
src/osm/: mod.rs  profile.rs
src/osm/reader/: graph_builder.rs  mod.rs  model.rs  xml.rs
src/osm/reader/pbf/: fileformat.rs  mod.rs  osmformat.rs
