[package]
name = "routex"
version = "0.1.0"
authors = ["Mikołaj Kuranowski"]
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.5.47", features = ["derive"], optional = true }
flate2 = { version = "1.1.2", features = ["zlib-rs"] }
quick-xml = "0.37.2"

[features]
cli = ["dep:clap"]

[lib]
name = "routex"
path = "src/lib.rs"
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "routex"
path = "src/main.rs"
required-features = ["cli"]
