[package]
name = "routex"
version = "1.0.0"
description = "Simple routing over OpenStreetMap data"
authors = ["Mikołaj Kuranowski <mkuranowski+foss@gmail.com>"]
repository = "https://github.com/mkuranowski/routex"
edition = "2021"
license = "MIT"

[dependencies]
bzip2 = "0.6.0"
clap = { version = "4.5.47", features = ["derive"], optional = true }
colog = { version = "1.4.0", optional = true }
flate2 = { version = "1.1.2", features = ["zlib-rs"] }
log = { version = "0.4.28", features = ["std"] }
protobuf = "3.7.2"
quick-xml = "0.37.2"
thiserror = "2.0.16"

[features]
cli = ["dep:clap", "dep:colog"]

[lib]
name = "routex"
path = "src/lib.rs"
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "routex"
path = "src/main.rs"
required-features = ["cli"]
